--- a/WeatherAppXam/WeatherAppXam.Android/WeatherAppXam.Android.csproj
+++ b/WeatherAppXam/WeatherAppXam.Android/WeatherAppXam.Android.csproj
@@ -141,5 +141,20 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\weatherTextLightBlue1.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\weatherTextLightBlue2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\wn_logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\wn_logo2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\wn_logo3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\icon_notification.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
