--- a/WeatherAppXam/WeatherAppXam.Android/WeatherAppXam.Android.csproj
+++ b/WeatherAppXam/WeatherAppXam.Android/WeatherAppXam.Android.csproj
@@ -156,5 +156,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\icon_notification.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
