--- a/WeatherAppXam/WeatherAppXam.iOS/WeatherAppXam.iOS.csproj
+++ b/WeatherAppXam/WeatherAppXam.iOS/WeatherAppXam.iOS.csproj
@@ -135,6 +135,9 @@
     <PackageReference Include="Com.Airbnb.Xamarin.Forms.Lottie">
       <Version>4.0.11</Version>
     </PackageReference>
+    <PackageReference Include="Rg.Plugins.Popup">
+      <Version>2.0.0.14</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.CommunityToolkit">
       <Version>1.3.0</Version>
     </PackageReference>
