--- a/WeatherAppXam/WeatherAppXam/WeatherAppXam.csproj
+++ b/WeatherAppXam/WeatherAppXam/WeatherAppXam.csproj
@@ -49,6 +49,9 @@
     <EmbeddedResource Update="Views\ForecastPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\ForecastPopupPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\Home2Page.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
