--- a/WeatherAppXam/WeatherAppXam.Android/Properties/AndroidManifest.xml
+++ b/WeatherAppXam/WeatherAppXam.Android/Properties/AndroidManifest.xml
@@ -1,12 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0.0" package="com.tomiwo.weatherforecast" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.0.1" package="com.tomiwo.weatherforecast" android:installLocation="auto" android:versionCode="1">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="30" />
-	<application android:label="Weather Forecast" android:theme="@style/MyTheme.Splash" android:icon="@mipmap/ic_launcher"></application>
+	<application android:label="Weather Forecast" android:theme="@style/MyTheme.Splash" android:icon="@mipmap/launcher_foreground"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-feature android:name="android.hardware.location" android:required="false" />
 	<uses-feature android:name="android.hardware.location.gps" android:required="false" />
 	<uses-feature android:name="android.hardware.location.network" android:required="false" />
-	<uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 </manifest>
